# wasm-sonobe-integration

./: .gitignore  README.md  app.js  compile_circuits.sh  package.json  setup.sh
circuits/: cubic_circuit.circom
public/: cubic_circuit.wasm  index.html  sonobe_wasm_browser_bg.wasm  with_external_inputs.wasm
public/js/: fold.js  sonobe_wasm_browser.js
sonobe_wasm_browser/: Cargo.toml
sonobe_wasm_browser/src/: lib.rs
