[package]
name = "sonobe_wasm_browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ark-serialize = { version = "^0.4.0", default-features = false }

web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.6"
web-time = "1.1"
wasm-bindgen = "0.2"

folding-schemes = { git = "https://github.com/CPerezz/wasm-sonobe-integration.git", default-features = false, branch = "feat/better_browser_support", features = [
    "parallel",
    "browser",
] }
ark-groth16 = { version = "^0.4.0" }
ark-bn254 = { version = "0.4.0", features = ["r1cs"] }
ark-grumpkin = { version = "0.4.0", features = ["r1cs"] }
ark-ec = "0.4.1"
ark-ff = { version = "=0.4.1", default-features = false, features = [
    "asm",
    "parallel",
] }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-snark = { version = "^0.4.0", default-features = false }
ark-poly-commit = "^0.4.0"
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = [
    "r1cs",
    "sponge",
    "crh",
] }
ark-std = "0.4.0"
color-eyre = "0.6.2"
num-bigint = "0.4.3"
byteorder = "1.4.3"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[patch.crates-io]
# patch ark_curves to use a cherry-picked version which contains
# bn254::constraints & grumpkin for v0.4.0 (once arkworks v0.5.0 is released
# this will no longer be needed)
ark-bn254 = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick" }
ark-grumpkin = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick" }
ark-r1cs-std = { git = "https://github.com/winderica/r1cs-std", branch = "cherry-pick" }
